[tool.poetry]
name = "nonebot-plugin-abstain-diary"
version = "0.1.1"
description = "适用于nonebot2 v11的戒x打卡日记插件"
authors = ["Ikaros <327209194@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_abstain_diary"}]
homepage = "https://github.com/Ikaros-521/nonebot_plugin_abstain_diary"
repository = "https://github.com/Ikaros-521/nonebot_plugin_abstain_diary"
documentation = "https://github.com/Ikaros-521/nonebot_plugin_abstain_diary/blob/master/README.md"

# 添加清华镜像
[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true  # 设置清华镜像为默认回调, 以避免 poetry 在某些缺省操作里又回调到 pypi 仓库.

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"
nonebot2 = "^2.0.0b5"
nonebot-adapter-onebot = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
